--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,4 @@
 <h1> This is home </h1>
 
-<%= link_to "logout", destroy_user_session_path, method: :delete %>
+<%= link_to("logout", destroy_user_session_path,
+                                class: "btn btn-xs btn-danger", method: :delete) %>
